--- a/main.css
+++ b/main.css
@@ -146,7 +146,31 @@ li{
     padding-bottom: 40px;
     
 }
-.pa{
+/* .pa{
     margin-left: 20px;
     padding-left: 30px;
+}
+.pass{
+    margin-left: -1704px;
+    margin-top: 50px;
+} */
+.container1{
+    display: grid;
+    grid-template-columns: 65% 53%;
+    grid-template-rows: 40% 47%;
+}
+.container2{
+    display: grid;
+    grid-template-columns: 63% 53%;
+    grid-template-rows: 40% 47%;
+    margin-bottom: 37px;
+    margin-left: 32px;
+    
+}    
+.container3{
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows:  10% 10% 10% 10% 10% 10% 10% 10%;
+    margin-top: 50px;
+    margin-right: 700px;
 }
