--- a/main.css
+++ b/main.css
@@ -110,9 +110,9 @@ li{
     border: 1px solid black;  
 }
 .table-container{
-    margin-left: 300px;
+    margin-left: 295px;
 }
-.styled-table {
+/* .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
@@ -121,56 +121,39 @@ li{
     box-shadow: 0 0 20px rgba(137, 64, 64, 0.15);
     width: 98%;
     padding-left: 300px;
-
     
-}  
-
-/* .styled-table thead tr {
-    background-color: green;
-    width: 100%;
     
-} */
-.top-container{
+}  */
+
+ /* table tr td {
+    
+    border-collapse: collapse;
+    padding: 6px;
     background: #d1e7f6;
-    border-bottom: solid black 1px;
-    
-}
-.con{
-    padding-bottom: 30px;
-    padding-top: 30px;
-    padding-right: 0px;
+    border-bottom: solid black 2px;
+
+}  */
+
+table{
+    border-collapse: collapse;
+    padding: 6px;
+    background: #d1e7f6;
 
 }
 
-.st1{
-    padding-bottom: 40px;
+.headd{
+    border-bottom: solid black 2px;
     
 }
-/* .pa{
-    margin-left: 20px;
-    padding-left: 30px;
+
+td{
+    padding: 6px;
 }
-.pass{
-    margin-left: -1704px;
-    margin-top: 50px;
-} */
-.container1{
-    display: grid;
-    grid-template-columns: 65% 53%;
-    grid-template-rows: 40% 47%;
+
+.bodyy{
+    padding: 6px;
 }
-.container2{
-    display: grid;
-    grid-template-columns: 63% 53%;
-    grid-template-rows: 40% 47%;
-    margin-bottom: 37px;
-    margin-left: 32px;
-    
-}    
-.container3{
-    display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10%;
-    grid-template-rows:  10% 10% 10% 10% 10% 10% 10% 10%;
-    margin-top: 50px;
-    margin-right: 700px;
+
+.bodyy:nth-child(odd){
+    background: white;
 }
