frontend-popup Assignemnt

--- a/main.css
+++ b/main.css
@@ -1,159 +1,266 @@
 *{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    font-family: sans-serif;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
-body{
-    background: white;
-    margin: 0;
-    padding: 0 ;
-}
-.logo1{
-    background: #1d6295;
-    width: 100%;
+.container{
     display: flex;
-    overflow: auto;
-    justify-content: space-between;
-    padding-top:  10px;
-    padding-bottom: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #F2F2F2;
-    font-weight: bold;
-}
-.logo{
-    width: 100px;
-
-}
-.name{
-    margin: 10px;
-}
-li{
-    list-style: none;
-    
-}
-.navbar{
-    background: #a3ceed;
-    padding: 10px;
-    
-}
-.ul{
-    display: flex;
-    justify-content: flex-start;
-    padding: 2px;
-}
-.name1{
-    padding-right: 130px;
+    justify-content: center;
+    align-items: center;
 }
 
-#sidecontainer{
-    background-color: #253848;
-    height: 100%;
-    width: 19%;   
-    position: fixed;
-    padding-top: 15px;        
-    color: white;
-    display: grid;
-    text-align: center; 
-    display: grid;
-    margin-top: -148px;
-    grid-template-columns: 50% 35%;
-    grid-template-rows: 7% 7% 7% 7% 7% 7%;    
-}
-.cell{
-    padding: 2px;
-}
-.menu-bar-container{
-    overflow: hidden;
-    margin-left: 245px;
-    padding: 1px;
-    margin-top: 0px;
-    background-color: #e4e8e8;
-    padding-left: 110px;
-    width: 83%;
-    grid-template-columns: 14% 22% 11% 12% 12% 12% 9% 13%;
-} 
-
-.elements{  
-    padding: 2px;
-}
-#color-box{     
-    margin-left: 345px ;
-    padding-top: 30px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 20px;
-    width: 75%; 
-}
-#color-box span{
-    padding-left: 65px;
-    
-}
-.colorbox1{
-    background: linear-gradient(to right, #92d050 20%, #028101 100%);
-    padding: 20px;  
-    border: 1px solid black;    
-}
-.colorbox2{
-    background: linear-gradient(to right, #ffb700 20%, #ff6600 100%);
-    padding: 20px;    
-    border: 1px solid black;  
-}
-.colorbox3{
-    background: linear-gradient(to right, #03abe9 20%, #276f8b 100%);
-    padding: 20px;  
-    border: 1px solid black;    
-}
-.colorbox4{
-    background: linear-gradient(to right, #9f9eb2 20%, #263949 100%);
-    padding: 20px;  
-    border: 1px solid black;  
-}
-.table-container{
-    margin-left: 295px;
-}
-/* .styled-table {
+.styled-table {
     border-collapse: collapse;
-    margin: 25px 0;
+    margin-top: 35px;
+
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(137, 64, 64, 0.15);
-    width: 98%;
-    padding-left: 300px;
-    
-    
-}  */
-
- /* table tr td {
-    
-    border-collapse: collapse;
-    padding: 6px;
-    background: #d1e7f6;
-    border-bottom: solid black 2px;
-
-}  */
-
-table{
-    border-collapse: collapse;
-    padding: 6px;
-    background: #d1e7f6;
-
-}
-
-.headd{
-    border-bottom: solid black 2px;
+    min-width: 800px;
+    width: 1300px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     
 }
-
-td{
-    padding: 6px;
+.styled-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
 }
 
-.bodyy{
-    padding: 6px;
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
 }
 
-.bodyy:nth-child(odd){
-    background: white;
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
 }
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+
+/* .popup{
+    background-color: #ffffff;
+    width: 420px;
+    padding: 30px 40px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: "Poppins",sans-serif;
+    display: none; 
+    text-align: center;
+}
+.popup button{
+    display: block;
+    margin:  0 0 20px auto;
+    background-color: transparent;
+    font-size: 30px;
+    color: #ffffff;
+		background: #03549a;
+		border-radius: 100%;
+		width: 40px;
+		height: 40px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.popup h2{
+	margin-top: -20px;
+}
+.popup p{
+    font-size: 14px;
+    text-align: justify;
+    margin: 20px 0;
+    line-height: 25px;
+}
+a{
+    display: block;
+    width: 150px;
+    position: relative;
+    margin: 10px auto;
+    text-align: center;
+    background-color: #0f72e5;
+		border-radius: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 8px 0;
+} */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    /* margin: 15% auto; 15% from the top and centered */
+    margin-top: 50px;
+    margin-left: 250px;
+    padding: 30px 50px 30px 50px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  li{
+      list-style: none;
+      padding: 2px;
+  }
+  .modal1{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  .close1 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close1:hover,
+  .close1:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal2{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  .close2 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close2:hover,
+  .close2:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal3{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  .close3 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close3:hover,
+  .close3:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .modal4{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  .close4 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close4:hover,
+  .close4:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .modal5{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 40%; /* Full width */
+    height: 30%; /* Full height */
+    /* overflow: auto; Enable scroll if needed */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0,0.4); Black w/ opacity */
+  }
+  .close5 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close5:hover,
+  .close5:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
